--- a/app/src/main/res/layout/order_item.xml
+++ b/app/src/main/res/layout/order_item.xml
@@ -17,7 +17,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_alignParentLeft="true"
-            android:text="ID: "
+            android:text="Order ID: "
             android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
 
         <TextView
@@ -60,21 +60,21 @@
             android:id="@+id/button_statistics"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Statistics"
-            android:layout_marginStart="10dp"
-            android:layout_marginLeft="10dp"
-            android:layout_toEndOf="@id/text_view_car_model"
-            android:layout_toRightOf="@id/text_view_car_model"/>
+            android:layout_marginEnd="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_toStartOf="@+id/button_done"
+            android:layout_toLeftOf="@+id/button_done"
+            android:text="Statistics" />
 
         <Button
             android:id="@+id/button_done"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Done"
-            android:layout_marginStart="5dp"
-            android:layout_marginLeft="5dp"
-            android:layout_toEndOf="@id/button_statistics"
-            android:layout_toRightOf="@id/button_statistics"/>
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginEnd="5dp"
+            android:layout_marginRight="5dp"
+            android:text="Done" />
 
         <TextView
             android:id="@+id/text_view_description"
@@ -84,7 +84,8 @@
             android:layout_marginTop="5dp"
             android:text="Description of problem"
             android:maxLines="1"
-            android:ellipsize="end"/>
+            android:ellipsize="end"
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
 
     </RelativeLayout>
 
