--- a/app/src/main/res/layout/fragment_parts.xml
+++ b/app/src/main/res/layout/fragment_parts.xml
@@ -12,7 +12,7 @@
         android:layout_height="match_parent" />
 
     <TextView
-        android:id="@+id/textView1"
+        android:id="@+id/textViewTitle1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="All information about parts:"
@@ -23,7 +23,7 @@
         android:paddingTop="10dp"/>
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/textViewStatistics"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingVertical="10dp"
