--- a/app/src/main/res/layout/activity_add_part.xml
+++ b/app/src/main/res/layout/activity_add_part.xml
@@ -7,30 +7,17 @@
     tools:context=".AddPartActivity" >
 
     <EditText
-        android:id="@+id/idAdd"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="124dp"
-        android:ems="10"
-        android:hint="ID"
-        android:inputType="textPersonName"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <EditText
         android:id="@+id/nameAdd"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="28dp"
         android:ems="10"
         android:hint="Name"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/idAdd" />
+        tools:layout_editor_absoluteY="197dp"
+        tools:ignore="MissingConstraints" />
 
     <EditText
         android:id="@+id/categoryAdd"
