--- a/app/src/main/res/layout/fragment_parts.xml
+++ b/app/src/main/res/layout/fragment_parts.xml
@@ -17,23 +17,17 @@
         android:layout_height="wrap_content"
         android:text="All information about parts:"
         android:textColor="@color/black"
-        android:textSize="24dp"
+        android:textSize="28dp"
         android:paddingLeft="20dp"
         android:paddingRight="20dp"
         android:paddingTop="10dp"/>
 
-    <TextView
-        android:id="@+id/textViewStatistics"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerViewStatistics"
+        android:paddingTop="40dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingVertical="10dp"
-        android:layout_marginTop="60dp"
-        android:layout_marginHorizontal="40dp"
-        android:textColor="@color/black"
-        android:text="S\nt\na\nt\ni\ns\nt\ni\nc\ns"
-        android:textSize="28dp"
-        android:paddingTop="200dp"
-        android:paddingLeft="20dp"
-        />
+        android:layout_height="match_parent"
+        android:layout_marginTop="50dp"
+        tools:listitem="@layout/part_item" />
 
 </FrameLayout>
