Changed input types while adding part

--- a/app/src/main/res/layout/activity_add_part.xml
+++ b/app/src/main/res/layout/activity_add_part.xml
@@ -12,6 +12,7 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:hint="Name"
+        android:layout_marginTop="80dp"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
@@ -26,7 +27,7 @@
         android:layout_marginTop="28dp"
         android:ems="10"
         android:hint="Category"
-        android:inputType="phone"
+        android:inputType="text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
@@ -39,7 +40,7 @@
         android:layout_marginTop="28dp"
         android:ems="10"
         android:hint="Producer"
-        android:inputType="number"
+        android:inputType="text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/categoryAdd" />
