--- a/app/src/main/res/layout/fragment_deadline.xml
+++ b/app/src/main/res/layout/fragment_deadline.xml
@@ -29,26 +29,55 @@
         android:id="@+id/textViewDate"
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        android:layout_marginTop="140dp"
         android:layout_marginLeft="20dp"
+        android:layout_marginTop="120dp"
         android:layout_marginRight="20dp"
         android:gravity="center"
-        android:textSize="28dp"
-        android:textColor="@color/black"
         android:text="28th of January 2021"
+        android:textColor="@color/black"
+        android:textSize="28dp" />
+
+    <EditText
+        android:id="@+id/editTextDate"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="220dp"
+        android:gravity="center"
+        android:layout_marginHorizontal="20dp"
+        android:hint="To change deadline, enter the new date here"
         />
 
     <Button
         android:id="@+id/buttonChange"
         android:layout_width="match_parent"
-        android:layout_height="80dp"
-        android:layout_marginLeft="100dp"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="50dp"
         android:layout_marginTop="300dp"
-        android:layout_marginRight="100dp"
-        android:paddingTop="10dp"
-        android:text="Change"
-        android:textColor="@color/white"
+        android:layout_marginRight="220dp"
         android:backgroundTint="#ac4b1c"
+        android:paddingTop="10dp"
+        android:text="Save changes"
+        android:textColor="@color/white"
         android:textSize="24dp" />
+
+    <Button
+        android:id="@+id/buttonApplyChanges"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="220dp"
+        android:layout_marginTop="300dp"
+        android:layout_marginRight="50dp"
+        android:backgroundTint="#ad8b0c"
+        android:paddingTop="10dp"
+        android:text="Apply changes"
+        android:textColor="@color/white"
+        android:textSize="24dp" />
+
+    <Switch
+        android:id="@+id/switch1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        tools:ignore="UseSwitchCompatOrMaterialXml" />
 
 </FrameLayout>
