--- a/app/src/main/res/layout/order_item.xml
+++ b/app/src/main/res/layout/order_item.xml
@@ -60,21 +60,16 @@
             android:id="@+id/button_statistics"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_toStartOf="@+id/button_done"
-            android:layout_toLeftOf="@+id/button_done"
-            android:text="Statistics" />
-
-        <Button
-            android:id="@+id/button_done"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_marginEnd="0dp"
+            android:layout_marginRight="0dp"
             android:layout_alignParentEnd="true"
+            android:text="Statistics"
             android:layout_alignParentRight="true"
-            android:layout_marginEnd="5dp"
-            android:layout_marginRight="5dp"
-            android:text="Done" />
+            android:background="@drawable/statistics_button"
+            android:backgroundTint="@color/purple_500"
+            android:textColor="@color/white"
+            android:onClick="goToStats"
+            />
 
         <TextView
             android:id="@+id/text_view_description"
