--- a/app/src/main/res/layout/activity_info_about_order.xml
+++ b/app/src/main/res/layout/activity_info_about_order.xml
@@ -33,10 +33,10 @@
         android:text="Deadline"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.198"
+        app:layout_constraintHorizontal_bias="0.76"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.122" />
+        app:layout_constraintVertical_bias="0.121" />
 
     <Button
         android:id="@+id/button_personal_note"
@@ -48,21 +48,21 @@
         android:text="Personal note"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.212"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.121" />
+        app:layout_constraintVertical_bias="0.96" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view_parts_info"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="470dp"
+        android:layout_marginTop="100dp"
         android:text="TextView"
-        android:layout_marginTop="40dp"
-        app:layout_constraintTop_toBottomOf="@+id/button_personal_note"
+        app:layout_constraintTop_toBottomOf="@+id/textViewTitle1"
         tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="10dp"
-        tools:listitem="@layout/part_item"
-        />
+        tools:layout_editor_absoluteX="0dp"
+        tools:listitem="@layout/part_item" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
