--- a/app/src/main/res/layout/activity_info_about_order.xml
+++ b/app/src/main/res/layout/activity_info_about_order.xml
@@ -2,7 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".InfoAboutOrderActivity" >
 
@@ -27,16 +27,13 @@
         android:id="@+id/button_deadline"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="90dp"
-        android:layout_marginRight="70dp"
         android:background="@drawable/statistics_button"
         android:text="Deadline"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.76"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.121" />
+        app:layout_constraintVertical_bias="0.111" />
 
     <Button
         android:id="@+id/button_personal_note"
@@ -44,20 +41,21 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="40dp"
         android:layout_marginRight="40dp"
+        android:layout_marginBottom="30dp"
         android:background="@drawable/statistics_button"
         android:text="Personal note"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.212"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/recycler_view_parts_info"
         app:layout_constraintVertical_bias="0.96" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view_parts_info"
         android:layout_width="match_parent"
-        android:layout_height="470dp"
-        android:layout_marginTop="100dp"
+        android:layout_height="match_parent"
+        android:layout_marginVertical="140dp"
         android:text="TextView"
         app:layout_constraintTop_toBottomOf="@+id/textViewTitle1"
         tools:ignore="MissingConstraints"
