--- a/app/src/main/res/layout/activity_info_about_order.xml
+++ b/app/src/main/res/layout/activity_info_about_order.xml
@@ -62,5 +62,16 @@
         tools:layout_editor_absoluteX="0dp"
         tools:listitem="@layout/part_item" />
 
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/button_add_part"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity='bottom|end'
+        android:src="@drawable/ic_add_part"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="300dp"
+        tools:layout_editor_absoluteY="660dp"
+        android:layout_margin="30dp"/>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
