--- a/app/src/main/res/layout/activity_personal_note.xml
+++ b/app/src/main/res/layout/activity_personal_note.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -7,17 +7,19 @@
     android:layout_height="match_parent"
     android:paddingTop="20dp"
     android:paddingHorizontal="20dp"
+    android:orientation="vertical"
     tools:context=".PersonalNoteActivity">
 
 
     <TextView
         android:id="@+id/textViewNote"
         android:layout_width="match_parent"
-        android:layout_height="69dp"
+        android:layout_height="wrap_content"
         android:outlineAmbientShadowColor="@color/black"
         android:paddingLeft="20dp"
         android:paddingTop="10dp"
         android:text="Note: "
+        android:paddingBottom="30dp"
         android:gravity="center"
         android:textColor="@color/black"
         android:textSize="40dp"
@@ -25,25 +27,56 @@
         tools:layout_editor_absoluteX="20dp"
         tools:layout_editor_absoluteY="20dp" />
 
+    <TextView
+        android:id="@+id/textView_note"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingVertical="20dp"
+        android:text="There will be your personal note"
+        android:textColor="@color/black"
+        android:textSize="24dp"
+        />
+
+    <EditText
+        android:id="@+id/editTextNote"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Enter your note here"
+        android:textSize="24dp"
+        android:paddingTop="40dp"
+        android:padding="20dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.344"
+        tools:layout_editor_absoluteX="0dp" />
 
     <Button
-        android:id="@+id/buttonModify"
+        android:id="@+id/buttonModifyNote"
         android:layout_width="wrap_content"
         android:layout_height="80dp"
+        android:layout_gravity="center_horizontal"
         android:layout_marginHorizontal="40dp"
         android:backgroundTint="#fddb3a"
+        android:gravity="center"
         android:paddingHorizontal="30dp"
         android:paddingTop="10dp"
         android:text="Modify"
-        android:gravity="center"
         android:textColor="@color/black"
         android:textSize="24dp"
         tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="20dp"
-        tools:layout_editor_absoluteY="500dp" />
+        tools:layout_editor_absoluteY="500dp"
+        />
+
+    <Switch
+        android:id="@+id/switch2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        tools:ignore="UseSwitchCompatOrMaterialXml" />
 
     <Button
-        android:id="@+id/buttonAdd"
+        android:id="@+id/buttonAddNote"
         android:layout_width="wrap_content"
         android:layout_height="80dp"
         android:backgroundTint="#00af91"
@@ -51,6 +84,7 @@
         android:paddingHorizontal="50dp"
         android:text="Add"
         android:gravity="center"
+        android:layout_gravity="center_horizontal"
         android:textColor="@color/black"
         android:textSize="24dp"
         android:paddingRight="30dp"
@@ -58,16 +92,5 @@
         tools:layout_editor_absoluteX="220dp"
         tools:layout_editor_absoluteY="500dp" />
 
-    <EditText
-        android:id="@+id/editText"
-        android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:hint="Enter your note here"
-        android:text=""
-        android:textSize="24dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.344"
-        tools:layout_editor_absoluteX="0dp" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
